# MTBS

MTBS/: CMakeLists.txt  Makefile  PROJECT_STATUS.md  README.md  SETUP_WINDOWS.md  build.bat  build.ps1
MTBS/frontend/: README.md  index.html  script.js  styles.css
MTBS/include/: account.h  bank.h  bank_utils.h  thread_manager.h  transaction.h
MTBS/src/: account.cpp  bank.cpp  bank_utils.cpp  main.cpp  thread_manager.cpp  transaction.cpp
